--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
 				<div class="navbar-menu">
 					<ul class="navbar-nav">
 						<li class="nav-item dropdown">
+							<a href="#" class="nav-link dropdown-toggle">Options</a>
+							<ul class="dropdown-menu" id="options-menu">
+								<li
+									><a
+										href="#"
+										id="diagLink"
+										class="dropdown-item active"
+										>Options ON|OFF</a
+									></li
+								>
+							</ul>
+						</li>
+						<li class="nav-item dropdown">
 							<a href="#" class="nav-link dropdown-toggle">Vue</a>
 							<ul class="dropdown-menu" id="view-menu">
 								<!-- Les modes de caméra seront ajoutés ici par JS -->
@@ -41,7 +54,7 @@
 		</nav>
 
 		<div id="help"> </div>
-		<div id="diag" class="muted">
+		<div id="diag" class="muted hidden">
 			<div
 				><span id="modeLabel">Mode:</span>
 				<span id="modeName">3e personne</span></div
