modified:   css/style.css 	modified:   index.html 	modified:   src/ui.js

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 				<div class="navbar-menu">
 					<ul class="navbar-nav">
 						<li class="nav-item dropdown">
-							<a href="#" class="nav-link dropdown-toggle">Options</a>
-							<ul class="dropdown-menu" id="options-menu">
+							<a href="#" class="nav-link dropdown-toggle">Infos</a>
+							<ul class="dropdown-menu" id="infos-menu">
 								<li
 									><a
 										href="#"
-										id="diagLink"
+										id="infosLink"
 										class="dropdown-item active"
-										>Options ON|OFF</a
+										>Afficher les infos</a
 									></li
 								>
 							</ul>
@@ -54,7 +54,7 @@
 		</nav>
 
 		<div id="help"> </div>
-		<div id="diag" class="muted hidden">
+		<div id="infos" class="muted hidden">
 			<div
 				><span id="modeLabel">Mode:</span>
 				<span id="modeName">3e personne</span></div
