renamed:    textures/mars/8k_mars copy.jpg -> assets/textures/mars/8k_mars copy.jpg 	renamed:    textures/mars/mars_1k_bump.jpg -> assets/textures/mars/mars_1k_bump.jpg 	renamed:    textures/mars/mars_1k_color.jpg -> assets/textures/mars/mars_1k_color.jpg 	renamed:    textures/mars/mars_1k_normal.jpg -> assets/textures/mars/mars_1k_normal.jpg 	renamed:    textures/mars/mars_8k_bump.jpg -> assets/textures/mars/mars_8k_bump.jpg 	renamed:    textures/mars/mars_8k_color.jpg -> assets/textures/mars/mars_8k_color.jpg 	renamed:    textures/mars/sources.md -> assets/textures/mars/sources.md 	modified:   index.html 	deleted:    mars.html 	modified:   src/modules/gravity/mars.js 	modified:   src/modules/robot/robot.js 	modified:   src/scene.js 	deleted:    tools/detect_animation_in_glb.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<nav class="navbar">
 			<div class="navbar-container">
 				<div class="navbar-brand">
-					<a href="#">Logo</a>
+					<a href="#">Mars</a>
 				</div>
 				<div class="navbar-menu">
 					<ul class="navbar-nav">
@@ -31,10 +31,8 @@
 									><a
 										href="#"
 										id="infosLink"
-										class="dropdown-item active"
-										>Afficher les infos</a
-									></li
-								>
+										class="dropdown-item active"></a
+								></li>
 							</ul>
 						</li>
 						<li class="nav-item dropdown">
